<resources>
    <string name="app_name">Currency Converter</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="currency_converter">CURRENCY CONVERTER</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="echange_rate_0">Echange Rate: 0</string>
    <string name="trend_chart">Trend Chart</string>
    <string name="_0">0</string>
    <string name="_087">0</string>
    <string name="exchange_rate_1">Exchange Rate: 1</string>
    <string name="chart">Chart</string>
</resources>